syntax = "proto3";

import "bottle/fulfillment/v1/order.proto";
import "bottle/fulfillment/v1/tax_line.proto";

package bottle.fulfillment.v1;

message TaxCalculateRequest {
  string request_id = 1;
  bottle.fulfillment.v1.Order order = 2;
}

message TaxCalculateResponse {
  string request_id = 1;
  bottle.fulfillment.v1.Order order = 2;
}

service TaxService {
  rpc TaxCalculate(TaxCalculateRequest) returns (TaxCalculateResponse);
}
